# mi-copilot

./: .env.example  .gitignore  README.md  pyproject.toml
docs/community/: transformerlens-discussion-draft.md
docs/personas/: beginner-session.md  intermediate-session.md
docs/presentation/: result-slides-outline.md
mi_copilot/: __init__.py
mi_copilot/charton2024/: __init__.py  divisor_analysis.py  staircase.py  viz.py
mi_copilot/common/: __init__.py  data.py  models.py
mi_copilot/llm_assistant/: __init__.py  app.py  chat.py  cli.py  ingest.py  retrieve.py
mi_copilot/nanda2023/: __init__.py  ablation.py  attribution.py  fourier.py  head_analysis.py  progress.py  viz.py
mi_copilot/reproductions/: __init__.py  persona_sessions.py
